tests/baselines/reference/externModule.errors.txt
==== tests/cases/compiler/externModule.ts (13 errors) ====
    declare module {
            ~~~~~~
!!! error TS1005: ';' expected.
                   ~
!!! error TS1005: ';' expected.
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~
!!! error TS2304: Cannot find name 'module'.
        export class XDate {
        ~~~~~~
!!! error TS1129: Statement expected.
                     ~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    		public getDay():number;
    		       ~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    		public getXDate():number;
    		       ~~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    		// etc.
    
    	    // Called as a function
    	    // Not supported anymore? public (): string;
    	    
    	    // Called as a constructor
    	    constructor(year: number, month: number);
    	    constructor(year: number, month: number, date: number);
    	    constructor(year: number, month: number, date: number, hours: number);
    	    constructor(year: number, month: number, date: number, hours: number, minutes: number);
    	    constructor(year: number, month: number, date: number, hours: number, minutes: number, seconds: number);
    	    constructor(year: number, month: number, date: number, hours: number, minutes: number, seconds: number, ms: number);
    	    constructor(value: number);
    	    constructor();
    	    ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
    	    
    	    static parse(string: string): number;
    	           ~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    	    static UTC(year: number, month: number): number;
    	    static UTC(year: number, month: number, date: number): number;
    	    static UTC(year: number, month: number, date: number, hours: number): number;
    	    static UTC(year: number, month: number, date: number, hours: number, minutes: number): number;
    	    static UTC(year: number, month: number, date: number, hours: number, minutes: number, seconds: number): number;
    	    static UTC(year: number, month: number, date: number, hours: number, minutes: number, seconds: number,
    	           ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    		         ms: number): number;
    	    static now(): number;
    	           ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    var d=new XDate();
    d.getDay();
    d=new XDate(1978,2);
    d.getXDate();
    var n=XDate.parse("3/2/2004");
    n=XDate.UTC(1964,2,1);
    
    